fixed section header font clipping/rendering artifact issues in IE

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -87,8 +87,8 @@
 		}
 
 		h3, h4 {
-			padding-left: rem-calc(3);
-			padding-right: rem-calc(3);
+			padding-left: rem-calc(5);
+			padding-right: rem-calc(5);
 		}
 
 		h4:after {
@@ -230,8 +230,8 @@
 			}
 
 			h3, h4 {
-				padding-left: rem-calc(5);
-				padding-right: rem-calc(5);
+				padding-left: rem-calc(8);
+				padding-right: rem-calc(8);
 			}
 
 		}
@@ -264,8 +264,8 @@
 			}
 
 			h3, h4 {
-				padding-left: rem-calc(10);
-				padding-right: rem-calc(10);
+				padding-left: rem-calc(13);
+				padding-right: rem-calc(13);
 			}
 
 		}
